src/objects/SDC__Test__c.object
<CustomObject>
    <description>This is our testing custom object</description>
    <fields>
        <fullName>SDC__Employee_Phone__c</fullName>
        <label>Employee Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SDC__Employee_name__c</fullName>
        <label>Employee name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDC__Length_of_time_worked__c</fullName>
        <label>Length of time worked</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under 6 Months</fullName>
                </value>
                <value>
                    <fullName>6 - 12 Months</fullName>
                </value>
                <value>
                    <fullName>12 - 24 Months</fullName>
                </value>
                <value>
                    <fullName>Over 24 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDC__Name__c</fullName>
        <description>Name of employee</description>
        <label>Name</label>
        <type>Email</type>
    </fields>
    <label>Test</label>
    <listViews>
        <fullName>SDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>